update v3.1